--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "framer-motion": "^10.16.5",
     "leaflet": "^1.9.4",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-image-file-resizer": "^0.4.8",
+    "react-leaflet": "^4.2.1",
+    "react-player": "^2.13.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8"
