--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.19.1",
     "framer-motion": "^10.16.5",
     "leaflet": "^1.9.4",
     "morgan": "~1.9.1",
@@ -24,6 +24,7 @@
     "react-player": "^2.13.0"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.8"
+    "@types/leaflet": "^1.9.8",
+    "tailwindcss": "^3.4.1"
   }
 }
