--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-leaflet": "^4.2.1",
-    "react-player": "^2.13.0"
+    "react-player": "^2.13.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
