--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.19.1",
     "framer-motion": "^10.16.5",
+    "kill-port-process": "^3.2.1",
     "leaflet": "^1.9.4",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
@@ -26,7 +27,8 @@
     "react-image-file-resizer": "^0.4.8",
     "react-leaflet": "^4.2.1",
     "react-player": "^2.13.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "vite": "^5.2.8"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
