--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-leaflet": "^4.2.1",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.22.3",
-    "vite": "^5.2.8"
+    "vite": ">=5.2.14"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
